# CAAFE

./: .env_example  .gitignore  README.md  pyproject.toml
caafe/: __init__.py  assistant.py  caafe.py  caafe_evaluate.py  constants.py  data.py  metrics.py  run_llm_code.py  sklearn_wrapper.py  tools.py
caafe/configs/: app_config.py  default.yaml  loader.py
caafe/entity/: app_config.py  task.py  tools.py
caafe/executors/: base.py  jupyter.py
caafe/llm_clients/: base_client.py  litellm_client.py
caafe/prompting/: prompt_generator.py  utils.py
caafe/prompting/sections/: tool_available.py
caafe/task_inference/: task_inference.py
caafe/tools/: base.py  finish.py  jupyter.py
scripts/: run_classifiers_script.py
