[project]
name = "caafe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.97.2",
    "pydantic>=2.11.7",
    "tabpfn>=0.1.8",
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.1.0",
    "python-dotenv>=1.1.1",
    "omegaconf>=2.3.0",
    "litellm>=1.75.3",
    "langfuse>=3.2.3",
    "nbformat>=5.10.4",
    "rich>=14.1.0",
    "nbclient>=0.10.2",
]
